@@ -1,3 +1,9 @@
+2007-06-20  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
+
+	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO)
+
+	FIFO settings for CX700
+
 2007-06-14  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
 
 	* unichrome/via_accel.c: (viaInitExa):
